RM-46625 [ADMIN module] Code refactor and process improvements (#7598)
* RM-46625 "entrySet()" should be iterated when both the key and value are needed

* RM-46625 Restricted Identifiers should not be used as Identifiers

* RM-46625 Declare variable instead of using twice the same getter

* RM-46625 Constructors should not be used to instantiate "String", "BigInteger", "BigDecimal" and primitive-wrapper classes

* RM-46625 "close()" calls should not be redundant

* RM-46625 Boolean expressions should not be gratuitous

* RM-4662 5Inject in constructor and increase visibility to child classes

* RM-46625 throws declarations should not be superfluous

* RM-46625 Return of boolean expressions should not be wrapped into an if-then-else statement

* RM-46625 "entrySet()" should be iterated when both the key and value are needed

* RM-46625 Java features should be preferred to Guava

* RM-46625 The diamond operator ("<>") should be used

* RM-46625 Java features should be preferred to Guava

* RM-46625 Collection.isEmpty() should be used to test for emptiness

* RM-46625 throws declarations should not be superfluous

* RM-46625 Multiple variables should not be declared on the same line

* RM-46625 "close()" calls should not be redundant

* RM-46625 Anonymous inner classes containing only one method should become lambdas

* RM-46625 Java features should be preferred to Guava

* RM-46625 Inline local variable

* RM-46625 Simplify boolean evaluations

* RM-46625 Anonymous inner classes containing only one method should become lambdas

* RM-46625 Inline local variable

* RM-46625 Inject in constructor and increase visibility to child classes

* RM-46625 throws declarations should not be superfluous

* RM-46625 The diamond operator ("<>") should be used

* Remove useless assignments and toString