@@ -42,6 +42,7 @@ import java.time.ZoneId;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Set;
 
 public class ObjectDataAnonymizeServiceImpl implements ObjectDataAnonymizeService {
@@ -94,9 +95,9 @@ public class ObjectDataAnonymizeServiceImpl implements ObjectDataAnonymizeServic
     if (property == null || property.isRequired()) {
       return;
     }
-    for (Model record : data) {
-      mapper.set(record, path, null);
-      JPA.save(record);
+    for (Model model : data) {
+      mapper.set(model, path, null);
+      JPA.save(model);
     }
   }
 
@@ -120,9 +121,9 @@ public class ObjectDataAnonymizeServiceImpl implements ObjectDataAnonymizeServic
           I18n.get(IExceptionMessages.OBJECT_DATA_REPLACE_MISSING),
           recordValue);
     }
-    for (Model record : data) {
-      mapper.set(record, path, object);
-      JPA.save(record);
+    for (Model model : data) {
+      mapper.set(model, path, object);
+      JPA.save(model);
     }
   }
 
@@ -135,18 +136,17 @@ public class ObjectDataAnonymizeServiceImpl implements ObjectDataAnonymizeServic
 
     Map<String, Object> defaultValues = getDefaultValues(mapper, fields);
 
-    for (Model record : data) {
-      for (String field : defaultValues.keySet()) {
-        Object object = defaultValues.get(field);
-        mapper.set(record, field, object);
+    for (Model model : data) {
+      for (Entry<String, Object> fieldEntry : defaultValues.entrySet()) {
+        mapper.set(model, fieldEntry.getKey(), fieldEntry.getValue());
       }
-      JPA.save(record);
+      JPA.save(model);
 
       mailMessageRepo
           .all()
           .filter(
               "self.relatedId = ?1 AND self.relatedModel = ?2",
-              record.getId(),
+              model.getId(),
               mapper.getBeanClass().getName())
           .delete();
     }
@@ -184,7 +184,7 @@ public class ObjectDataAnonymizeServiceImpl implements ObjectDataAnonymizeServic
           }
         case "Integer":
           {
-            defaultValues.put(name, new Integer(0));
+            defaultValues.put(name, Integer.valueOf(0));
             break;
           }
         case "Boolean":
@@ -194,7 +194,7 @@ public class ObjectDataAnonymizeServiceImpl implements ObjectDataAnonymizeServic
           }
         case "Long":
           {
-            defaultValues.put(name, new Long(0));
+            defaultValues.put(name, Long.valueOf(0));
             break;
           }
         case "LocalTime":
